# digits-classifier

./: README.MD  requirements.txt  setup.cfg
src/digits/: analyze.py  classify.py  load_data.py  preprocess.py
test/: test_preprocess.py
topics/: grid_search_svc.py  random_search_scv.py  random_search_scv2.py
